parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AMPERSANT
    AND
    APOSTROPHE
    ARRAY
    ASSERT
    BREAK
    BYTE
    CASE
    CATCH
    CHAR
    CLASS
    CLOSETAG
    COLON
    COMMA
    COMMENTS
    COMMENTS_C99
    CONST
    CONTINUE
    DEFAULT
    DISTINT
    DOT_DOT
    DOUBLE
    ENUM
    EXTENDS
    FINAL
    FINALLY
    FLOAT
    FOR
    GOTO
    HASHTAG
    IDVAR
    IMPLEMENTS
    INSTANCEOF
    INTERFACE
    LONG
    MINUSEQUAL
    MINUSMINUS
    MODULO
    NATIVE
    OPENTAG
    OR
    PLUSEQUAL
    PLUSPLUS
    PRIVATE
    PROTECTED
    QUOTES
    RETURN
    SHORT
    STRICTFP
    SUPER
    SWITCH
    SYNCHRONIZED
    THIS
    THROW
    THROWS
    TIMESTIMES
    TRANSIENT
    TRUE
    TRY
    VOLATILE

Grammar

Rule 0     S' -> program
Rule 1     program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK
Rule 2     p_package -> PACKAGE ID SEMI
Rule 3     p_importar -> IMPORT JAVA DOT UTIL DOT SCANNER SEMI
Rule 4     declaration_list -> declaration_list declaraciones
Rule 5     declaration_list -> declaraciones
Rule 6     declaraciones -> INT ID SEMI
Rule 7     declaraciones -> INT ID EQUAL NUM SEMI
Rule 8     declaraciones -> ID ID SEMI
Rule 9     declaraciones -> SCANNER ID EQUAL NEW SCANNER LPAREN ID DOT ID RPAREN SEMI
Rule 10    declaraciones -> BOOLEAN ID EQUAL FALSE SEMI
Rule 11    declaraciones -> opera
Rule 12    declaraciones -> sentencia
Rule 13    opera -> ID EQUAL ID PLUS NUM SEMI
Rule 14    opera -> ID EQUAL ID MINUS NUM SEMI
Rule 15    opera -> ID EQUAL ID DIVIDE NUM SEMI
Rule 16    opera -> ID EQUAL ID TIMES NUM SEMI
Rule 17    opera -> ID EQUAL NUM PLUS NUM SEMI
Rule 18    opera -> ID EQUAL NUM MINUS NUM SEMI
Rule 19    opera -> ID EQUAL NUM DIVIDE NUM SEMI
Rule 20    opera -> ID EQUAL NUM TIMES NUM SEMI
Rule 21    opera -> ID EQUAL ID PLUS ID SEMI
Rule 22    opera -> ID EQUAL ID MINUS ID SEMI
Rule 23    opera -> ID EQUAL ID DIVIDE ID SEMI
Rule 24    opera -> ID EQUAL ID TIMES ID SEMI
Rule 25    opera -> ID EQUAL ID MINUS ID PLUS LPAREN ID PLUS NUM RPAREN SEMI
Rule 26    opera -> ID EQUAL ID PLUS ID PLUS LPAREN ID TIMES ID RPAREN SEMI
Rule 27    opera -> ID EQUAL ID MINUS ID PLUS LPAREN ID MINUS ID RPAREN SEMI
Rule 28    sentencia -> IF LPAREN ID ISEQUAL ID RPAREN LBLOCK response RBLOCK
Rule 29    sentencia -> IF LPAREN ID LESSEQUAL ID RPAREN LBLOCK response RBLOCK
Rule 30    sentencia -> IF LPAREN ID GREATEREQUAL ID RPAREN LBLOCK response RBLOCK
Rule 31    sentencia -> IF LPAREN ID DEQUAL ID RPAREN LBLOCK response RBLOCK
Rule 32    sentencia -> ELSE LBLOCK response RBLOCK
Rule 33    sentencia -> DO LBLOCK response RBLOCK
Rule 34    sentencia -> WHILE LPAREN ID LESS ID RPAREN SEMI
Rule 35    sentencia -> WHILE LPAREN ID GREATER ID RPAREN SEMI
Rule 36    sentencia -> WHILE LPAREN ID ISEQUAL ID RPAREN SEMI
Rule 37    sentencia -> WHILE LPAREN ID LESSEQUAL ID RPAREN SEMI
Rule 38    sentencia -> WHILE LPAREN ID GREATEREQUAL ID RPAREN SEMI
Rule 39    sentencia -> WHILE LPAREN ID DEQUAL ID RPAREN SEMI
Rule 40    response -> ID DOT ID DOT ID LPAREN STRING RPAREN SEMI

Terminals, with rules where they appear

ABSTRACT             : 
AMPERSANT            : 
AND                  : 
APOSTROPHE           : 
ARGS                 : 1
ARRAY                : 
ASSERT               : 
BOOLEAN              : 10
BREAK                : 
BYTE                 : 
CASE                 : 
CATCH                : 
CHAR                 : 
CLASS                : 
CLOSETAG             : 
COLON                : 
COMMA                : 
COMMENTS             : 
COMMENTS_C99         : 
CONST                : 
CONTINUE             : 
DEFAULT              : 
DEQUAL               : 31 39
DISTINT              : 
DIVIDE               : 15 19 23
DO                   : 33
DOT                  : 3 3 9 40 40
DOT_DOT              : 
DOUBLE               : 
ELSE                 : 32
ENUM                 : 
EQUAL                : 7 9 10 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
EXTENDS              : 
FALSE                : 10
FINAL                : 
FINALLY              : 
FLOAT                : 
FOR                  : 
GOTO                 : 
GREATER              : 35
GREATEREQUAL         : 30 38
HASHTAG              : 
ID                   : 1 2 6 7 8 8 9 9 9 10 13 13 14 14 15 15 16 16 17 18 19 20 21 21 21 22 22 22 23 23 23 24 24 24 25 25 25 25 26 26 26 26 26 27 27 27 27 27 28 28 29 29 30 30 31 31 34 34 35 35 36 36 37 37 38 38 39 39 40 40 40
IDVAR                : 
IF                   : 28 29 30 31
IMPLEMENTS           : 
IMPORT               : 3
INSTANCEOF           : 
INT                  : 6 7
INTERFACE            : 
ISEQUAL              : 28 36
JAVA                 : 3
LBLOCK               : 1 28 29 30 31 32 33
LBRACKET             : 1
LESS                 : 34
LESSEQUAL            : 29 37
LONG                 : 
LPAREN               : 1 9 25 26 27 28 29 30 31 34 35 36 37 38 39 40
MAIN                 : 1
MINUS                : 14 18 22 25 27 27
MINUSEQUAL           : 
MINUSMINUS           : 
MODULO               : 
NATIVE               : 
NEW                  : 9
NUM                  : 7 13 14 15 16 17 17 18 18 19 19 20 20 25
OPENTAG              : 
OR                   : 
PACKAGE              : 2
PLUS                 : 13 17 21 25 25 26 26 27
PLUSEQUAL            : 
PLUSPLUS             : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 1
QUOTES               : 
RBLOCK               : 1 28 29 30 31 32 33
RBRACKET             : 1
RETURN               : 
RPAREN               : 1 9 25 26 27 28 29 30 31 34 35 36 37 38 39 40
SCANNER              : 3 9 9
SEMI                 : 2 3 6 7 8 9 10 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 34 35 36 37 38 39 40
SHORT                : 
STATIC               : 1
STRICTFP             : 
STRING               : 40
SUPER                : 
SWITCH               : 
SYNCHRONIZED         : 
THIS                 : 
THROW                : 
THROWS               : 
TIMES                : 16 20 24 26
TIMESTIMES           : 
TRANSIENT            : 
TRUE                 : 
TRY                  : 
UTIL                 : 3
VOID                 : 1
VOLATILE             : 
WHILE                : 34 35 36 37 38 39
error                : 

Nonterminals, with rules where they appear

declaraciones        : 4 5
declaration_list     : 1 4
opera                : 11
p_importar           : 1
p_package            : 1
program              : 0
response             : 28 29 30 31 32 33
sentencia            : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK
    (2) p_package -> . PACKAGE ID SEMI

    PACKAGE         shift and go to state 3

    program                        shift and go to state 1
    p_package                      shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> p_package . p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK
    (3) p_importar -> . IMPORT JAVA DOT UTIL DOT SCANNER SEMI

    IMPORT          shift and go to state 5

    p_importar                     shift and go to state 4

state 3

    (2) p_package -> PACKAGE . ID SEMI

    ID              shift and go to state 6


state 4

    (1) program -> p_package p_importar . PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    PUBLIC          shift and go to state 7


state 5

    (3) p_importar -> IMPORT . JAVA DOT UTIL DOT SCANNER SEMI

    JAVA            shift and go to state 8


state 6

    (2) p_package -> PACKAGE ID . SEMI

    SEMI            shift and go to state 9


state 7

    (1) program -> p_package p_importar PUBLIC . STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    STATIC          shift and go to state 10


state 8

    (3) p_importar -> IMPORT JAVA . DOT UTIL DOT SCANNER SEMI

    DOT             shift and go to state 11


state 9

    (2) p_package -> PACKAGE ID SEMI .

    IMPORT          reduce using rule 2 (p_package -> PACKAGE ID SEMI .)


state 10

    (1) program -> p_package p_importar PUBLIC STATIC . VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    VOID            shift and go to state 12


state 11

    (3) p_importar -> IMPORT JAVA DOT . UTIL DOT SCANNER SEMI

    UTIL            shift and go to state 13


state 12

    (1) program -> p_package p_importar PUBLIC STATIC VOID . MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    MAIN            shift and go to state 14


state 13

    (3) p_importar -> IMPORT JAVA DOT UTIL . DOT SCANNER SEMI

    DOT             shift and go to state 15


state 14

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN . LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    LPAREN          shift and go to state 16


state 15

    (3) p_importar -> IMPORT JAVA DOT UTIL DOT . SCANNER SEMI

    SCANNER         shift and go to state 17


state 16

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN . ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    ID              shift and go to state 18


state 17

    (3) p_importar -> IMPORT JAVA DOT UTIL DOT SCANNER . SEMI

    SEMI            shift and go to state 19


state 18

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID . LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    LBRACKET        shift and go to state 20


state 19

    (3) p_importar -> IMPORT JAVA DOT UTIL DOT SCANNER SEMI .

    PUBLIC          reduce using rule 3 (p_importar -> IMPORT JAVA DOT UTIL DOT SCANNER SEMI .)


state 20

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET . RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK

    RBRACKET        shift and go to state 21


state 21

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET . ARGS RPAREN LBLOCK declaration_list RBLOCK

    ARGS            shift and go to state 22


state 22

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS . RPAREN LBLOCK declaration_list RBLOCK

    RPAREN          shift and go to state 23


state 23

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN . LBLOCK declaration_list RBLOCK

    LBLOCK          shift and go to state 24


state 24

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK . declaration_list RBLOCK
    (4) declaration_list -> . declaration_list declaraciones
    (5) declaration_list -> . declaraciones
    (6) declaraciones -> . INT ID SEMI
    (7) declaraciones -> . INT ID EQUAL NUM SEMI
    (8) declaraciones -> . ID ID SEMI
    (9) declaraciones -> . SCANNER ID EQUAL NEW SCANNER LPAREN ID DOT ID RPAREN SEMI
    (10) declaraciones -> . BOOLEAN ID EQUAL FALSE SEMI
    (11) declaraciones -> . opera
    (12) declaraciones -> . sentencia
    (13) opera -> . ID EQUAL ID PLUS NUM SEMI
    (14) opera -> . ID EQUAL ID MINUS NUM SEMI
    (15) opera -> . ID EQUAL ID DIVIDE NUM SEMI
    (16) opera -> . ID EQUAL ID TIMES NUM SEMI
    (17) opera -> . ID EQUAL NUM PLUS NUM SEMI
    (18) opera -> . ID EQUAL NUM MINUS NUM SEMI
    (19) opera -> . ID EQUAL NUM DIVIDE NUM SEMI
    (20) opera -> . ID EQUAL NUM TIMES NUM SEMI
    (21) opera -> . ID EQUAL ID PLUS ID SEMI
    (22) opera -> . ID EQUAL ID MINUS ID SEMI
    (23) opera -> . ID EQUAL ID DIVIDE ID SEMI
    (24) opera -> . ID EQUAL ID TIMES ID SEMI
    (25) opera -> . ID EQUAL ID MINUS ID PLUS LPAREN ID PLUS NUM RPAREN SEMI
    (26) opera -> . ID EQUAL ID PLUS ID PLUS LPAREN ID TIMES ID RPAREN SEMI
    (27) opera -> . ID EQUAL ID MINUS ID PLUS LPAREN ID MINUS ID RPAREN SEMI
    (28) sentencia -> . IF LPAREN ID ISEQUAL ID RPAREN LBLOCK response RBLOCK
    (29) sentencia -> . IF LPAREN ID LESSEQUAL ID RPAREN LBLOCK response RBLOCK
    (30) sentencia -> . IF LPAREN ID GREATEREQUAL ID RPAREN LBLOCK response RBLOCK
    (31) sentencia -> . IF LPAREN ID DEQUAL ID RPAREN LBLOCK response RBLOCK
    (32) sentencia -> . ELSE LBLOCK response RBLOCK
    (33) sentencia -> . DO LBLOCK response RBLOCK
    (34) sentencia -> . WHILE LPAREN ID LESS ID RPAREN SEMI
    (35) sentencia -> . WHILE LPAREN ID GREATER ID RPAREN SEMI
    (36) sentencia -> . WHILE LPAREN ID ISEQUAL ID RPAREN SEMI
    (37) sentencia -> . WHILE LPAREN ID LESSEQUAL ID RPAREN SEMI
    (38) sentencia -> . WHILE LPAREN ID GREATEREQUAL ID RPAREN SEMI
    (39) sentencia -> . WHILE LPAREN ID DEQUAL ID RPAREN SEMI

    INT             shift and go to state 28
    ID              shift and go to state 25
    SCANNER         shift and go to state 29
    BOOLEAN         shift and go to state 30
    IF              shift and go to state 33
    ELSE            shift and go to state 34
    DO              shift and go to state 35
    WHILE           shift and go to state 36

    declaration_list               shift and go to state 26
    declaraciones                  shift and go to state 27
    opera                          shift and go to state 31
    sentencia                      shift and go to state 32

state 25

    (8) declaraciones -> ID . ID SEMI
    (13) opera -> ID . EQUAL ID PLUS NUM SEMI
    (14) opera -> ID . EQUAL ID MINUS NUM SEMI
    (15) opera -> ID . EQUAL ID DIVIDE NUM SEMI
    (16) opera -> ID . EQUAL ID TIMES NUM SEMI
    (17) opera -> ID . EQUAL NUM PLUS NUM SEMI
    (18) opera -> ID . EQUAL NUM MINUS NUM SEMI
    (19) opera -> ID . EQUAL NUM DIVIDE NUM SEMI
    (20) opera -> ID . EQUAL NUM TIMES NUM SEMI
    (21) opera -> ID . EQUAL ID PLUS ID SEMI
    (22) opera -> ID . EQUAL ID MINUS ID SEMI
    (23) opera -> ID . EQUAL ID DIVIDE ID SEMI
    (24) opera -> ID . EQUAL ID TIMES ID SEMI
    (25) opera -> ID . EQUAL ID MINUS ID PLUS LPAREN ID PLUS NUM RPAREN SEMI
    (26) opera -> ID . EQUAL ID PLUS ID PLUS LPAREN ID TIMES ID RPAREN SEMI
    (27) opera -> ID . EQUAL ID MINUS ID PLUS LPAREN ID MINUS ID RPAREN SEMI

    ID              shift and go to state 37
    EQUAL           shift and go to state 38


state 26

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list . RBLOCK
    (4) declaration_list -> declaration_list . declaraciones
    (6) declaraciones -> . INT ID SEMI
    (7) declaraciones -> . INT ID EQUAL NUM SEMI
    (8) declaraciones -> . ID ID SEMI
    (9) declaraciones -> . SCANNER ID EQUAL NEW SCANNER LPAREN ID DOT ID RPAREN SEMI
    (10) declaraciones -> . BOOLEAN ID EQUAL FALSE SEMI
    (11) declaraciones -> . opera
    (12) declaraciones -> . sentencia
    (13) opera -> . ID EQUAL ID PLUS NUM SEMI
    (14) opera -> . ID EQUAL ID MINUS NUM SEMI
    (15) opera -> . ID EQUAL ID DIVIDE NUM SEMI
    (16) opera -> . ID EQUAL ID TIMES NUM SEMI
    (17) opera -> . ID EQUAL NUM PLUS NUM SEMI
    (18) opera -> . ID EQUAL NUM MINUS NUM SEMI
    (19) opera -> . ID EQUAL NUM DIVIDE NUM SEMI
    (20) opera -> . ID EQUAL NUM TIMES NUM SEMI
    (21) opera -> . ID EQUAL ID PLUS ID SEMI
    (22) opera -> . ID EQUAL ID MINUS ID SEMI
    (23) opera -> . ID EQUAL ID DIVIDE ID SEMI
    (24) opera -> . ID EQUAL ID TIMES ID SEMI
    (25) opera -> . ID EQUAL ID MINUS ID PLUS LPAREN ID PLUS NUM RPAREN SEMI
    (26) opera -> . ID EQUAL ID PLUS ID PLUS LPAREN ID TIMES ID RPAREN SEMI
    (27) opera -> . ID EQUAL ID MINUS ID PLUS LPAREN ID MINUS ID RPAREN SEMI
    (28) sentencia -> . IF LPAREN ID ISEQUAL ID RPAREN LBLOCK response RBLOCK
    (29) sentencia -> . IF LPAREN ID LESSEQUAL ID RPAREN LBLOCK response RBLOCK
    (30) sentencia -> . IF LPAREN ID GREATEREQUAL ID RPAREN LBLOCK response RBLOCK
    (31) sentencia -> . IF LPAREN ID DEQUAL ID RPAREN LBLOCK response RBLOCK
    (32) sentencia -> . ELSE LBLOCK response RBLOCK
    (33) sentencia -> . DO LBLOCK response RBLOCK
    (34) sentencia -> . WHILE LPAREN ID LESS ID RPAREN SEMI
    (35) sentencia -> . WHILE LPAREN ID GREATER ID RPAREN SEMI
    (36) sentencia -> . WHILE LPAREN ID ISEQUAL ID RPAREN SEMI
    (37) sentencia -> . WHILE LPAREN ID LESSEQUAL ID RPAREN SEMI
    (38) sentencia -> . WHILE LPAREN ID GREATEREQUAL ID RPAREN SEMI
    (39) sentencia -> . WHILE LPAREN ID DEQUAL ID RPAREN SEMI

    RBLOCK          shift and go to state 39
    INT             shift and go to state 28
    ID              shift and go to state 25
    SCANNER         shift and go to state 29
    BOOLEAN         shift and go to state 30
    IF              shift and go to state 33
    ELSE            shift and go to state 34
    DO              shift and go to state 35
    WHILE           shift and go to state 36

    declaraciones                  shift and go to state 40
    opera                          shift and go to state 31
    sentencia                      shift and go to state 32

state 27

    (5) declaration_list -> declaraciones .

    RBLOCK          reduce using rule 5 (declaration_list -> declaraciones .)
    INT             reduce using rule 5 (declaration_list -> declaraciones .)
    ID              reduce using rule 5 (declaration_list -> declaraciones .)
    SCANNER         reduce using rule 5 (declaration_list -> declaraciones .)
    BOOLEAN         reduce using rule 5 (declaration_list -> declaraciones .)
    IF              reduce using rule 5 (declaration_list -> declaraciones .)
    ELSE            reduce using rule 5 (declaration_list -> declaraciones .)
    DO              reduce using rule 5 (declaration_list -> declaraciones .)
    WHILE           reduce using rule 5 (declaration_list -> declaraciones .)


state 28

    (6) declaraciones -> INT . ID SEMI
    (7) declaraciones -> INT . ID EQUAL NUM SEMI

    ID              shift and go to state 41


state 29

    (9) declaraciones -> SCANNER . ID EQUAL NEW SCANNER LPAREN ID DOT ID RPAREN SEMI

    ID              shift and go to state 42


state 30

    (10) declaraciones -> BOOLEAN . ID EQUAL FALSE SEMI

    ID              shift and go to state 43


state 31

    (11) declaraciones -> opera .

    RBLOCK          reduce using rule 11 (declaraciones -> opera .)
    INT             reduce using rule 11 (declaraciones -> opera .)
    ID              reduce using rule 11 (declaraciones -> opera .)
    SCANNER         reduce using rule 11 (declaraciones -> opera .)
    BOOLEAN         reduce using rule 11 (declaraciones -> opera .)
    IF              reduce using rule 11 (declaraciones -> opera .)
    ELSE            reduce using rule 11 (declaraciones -> opera .)
    DO              reduce using rule 11 (declaraciones -> opera .)
    WHILE           reduce using rule 11 (declaraciones -> opera .)


state 32

    (12) declaraciones -> sentencia .

    RBLOCK          reduce using rule 12 (declaraciones -> sentencia .)
    INT             reduce using rule 12 (declaraciones -> sentencia .)
    ID              reduce using rule 12 (declaraciones -> sentencia .)
    SCANNER         reduce using rule 12 (declaraciones -> sentencia .)
    BOOLEAN         reduce using rule 12 (declaraciones -> sentencia .)
    IF              reduce using rule 12 (declaraciones -> sentencia .)
    ELSE            reduce using rule 12 (declaraciones -> sentencia .)
    DO              reduce using rule 12 (declaraciones -> sentencia .)
    WHILE           reduce using rule 12 (declaraciones -> sentencia .)


state 33

    (28) sentencia -> IF . LPAREN ID ISEQUAL ID RPAREN LBLOCK response RBLOCK
    (29) sentencia -> IF . LPAREN ID LESSEQUAL ID RPAREN LBLOCK response RBLOCK
    (30) sentencia -> IF . LPAREN ID GREATEREQUAL ID RPAREN LBLOCK response RBLOCK
    (31) sentencia -> IF . LPAREN ID DEQUAL ID RPAREN LBLOCK response RBLOCK

    LPAREN          shift and go to state 44


state 34

    (32) sentencia -> ELSE . LBLOCK response RBLOCK

    LBLOCK          shift and go to state 45


state 35

    (33) sentencia -> DO . LBLOCK response RBLOCK

    LBLOCK          shift and go to state 46


state 36

    (34) sentencia -> WHILE . LPAREN ID LESS ID RPAREN SEMI
    (35) sentencia -> WHILE . LPAREN ID GREATER ID RPAREN SEMI
    (36) sentencia -> WHILE . LPAREN ID ISEQUAL ID RPAREN SEMI
    (37) sentencia -> WHILE . LPAREN ID LESSEQUAL ID RPAREN SEMI
    (38) sentencia -> WHILE . LPAREN ID GREATEREQUAL ID RPAREN SEMI
    (39) sentencia -> WHILE . LPAREN ID DEQUAL ID RPAREN SEMI

    LPAREN          shift and go to state 47


state 37

    (8) declaraciones -> ID ID . SEMI

    SEMI            shift and go to state 48


state 38

    (13) opera -> ID EQUAL . ID PLUS NUM SEMI
    (14) opera -> ID EQUAL . ID MINUS NUM SEMI
    (15) opera -> ID EQUAL . ID DIVIDE NUM SEMI
    (16) opera -> ID EQUAL . ID TIMES NUM SEMI
    (17) opera -> ID EQUAL . NUM PLUS NUM SEMI
    (18) opera -> ID EQUAL . NUM MINUS NUM SEMI
    (19) opera -> ID EQUAL . NUM DIVIDE NUM SEMI
    (20) opera -> ID EQUAL . NUM TIMES NUM SEMI
    (21) opera -> ID EQUAL . ID PLUS ID SEMI
    (22) opera -> ID EQUAL . ID MINUS ID SEMI
    (23) opera -> ID EQUAL . ID DIVIDE ID SEMI
    (24) opera -> ID EQUAL . ID TIMES ID SEMI
    (25) opera -> ID EQUAL . ID MINUS ID PLUS LPAREN ID PLUS NUM RPAREN SEMI
    (26) opera -> ID EQUAL . ID PLUS ID PLUS LPAREN ID TIMES ID RPAREN SEMI
    (27) opera -> ID EQUAL . ID MINUS ID PLUS LPAREN ID MINUS ID RPAREN SEMI

    ID              shift and go to state 49
    NUM             shift and go to state 50


state 39

    (1) program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK .

    $end            reduce using rule 1 (program -> p_package p_importar PUBLIC STATIC VOID MAIN LPAREN ID LBRACKET RBRACKET ARGS RPAREN LBLOCK declaration_list RBLOCK .)


state 40

    (4) declaration_list -> declaration_list declaraciones .

    RBLOCK          reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    INT             reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    ID              reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    SCANNER         reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    BOOLEAN         reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    IF              reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    ELSE            reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    DO              reduce using rule 4 (declaration_list -> declaration_list declaraciones .)
    WHILE           reduce using rule 4 (declaration_list -> declaration_list declaraciones .)


state 41

    (6) declaraciones -> INT ID . SEMI
    (7) declaraciones -> INT ID . EQUAL NUM SEMI

    SEMI            shift and go to state 51
    EQUAL           shift and go to state 52


state 42

    (9) declaraciones -> SCANNER ID . EQUAL NEW SCANNER LPAREN ID DOT ID RPAREN SEMI

    EQUAL           shift and go to state 53


state 43

    (10) declaraciones -> BOOLEAN ID . EQUAL FALSE SEMI

    EQUAL           shift and go to state 54


state 44

    (28) sentencia -> IF LPAREN . ID ISEQUAL ID RPAREN LBLOCK response RBLOCK
    (29) sentencia -> IF LPAREN . ID LESSEQUAL ID RPAREN LBLOCK response RBLOCK
    (30) sentencia -> IF LPAREN . ID GREATEREQUAL ID RPAREN LBLOCK response RBLOCK
    (31) sentencia -> IF LPAREN . ID DEQUAL ID RPAREN LBLOCK response RBLOCK

    ID              shift and go to state 55


state 45

    (32) sentencia -> ELSE LBLOCK . response RBLOCK
    (40) response -> . ID DOT ID DOT ID LPAREN STRING RPAREN SEMI

    ID              shift and go to state 57

    response                       shift and go to state 56

state 46

    (33) sentencia -> DO LBLOCK . response RBLOCK
    (40) response -> . ID DOT ID DOT ID LPAREN STRING RPAREN SEMI

    ID              shift and go to state 57

    response                       shift and go to state 58

state 47

    (34) sentencia -> WHILE LPAREN . ID LESS ID RPAREN SEMI
    (35) sentencia -> WHILE LPAREN . ID GREATER ID RPAREN SEMI
    (36) sentencia -> WHILE LPAREN . ID ISEQUAL ID RPAREN SEMI
    (37) sentencia -> WHILE LPAREN . ID LESSEQUAL ID RPAREN SEMI
    (38) sentencia -> WHILE LPAREN . ID GREATEREQUAL ID RPAREN SEMI
    (39) sentencia -> WHILE LPAREN . ID DEQUAL ID RPAREN SEMI
